<resources>
    <string name="app_name">Anny</string>
    <string name="asterick_operator">*</string>

    <string name="s_or_s">%s | %s</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="android">Android</string>
    <string name="iamsunny619_gmail_com">iamsunny619@gmail.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_methods_for_drawer">Other Methods for drawer</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="anny">Anny</string>
    <string name="comming_soon">comming Soon</string>
    <string name="ok">ok</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="explore">explore</string>
    <string name="your_device_dont_support_speech_input">your device not support voice input</string>
    <string name="top_brands">Top Brands</string>
    <string name="filter_by">Filter by</string>
    <string name="categories">categories</string>
    <string name="subcategories">subcategories</string>
    <string name="search_for_product">Search for product</string>
    <string name="extra_charges_may_apply">extra charges may apply</string>
    <string name="go_to_cart">go to cart</string>
    <string name="_0">0</string>
    <string name="in_your_cart">in your cart</string>
    <string name="pay_amount">pay amount</string>
    <string name="total">total</string>
    <string name="taxes_and_charges">taxes and charges</string>
    <string name="item_total">item total</string>
    <string name="select_preferred_time_of_pickup">select preffered time of pickup</string>
    <string name="select_preferred_date_of_pickup">select prefer date of pickup</string>
    <string name="select_delivery_option">select deleviery option</string>
    <string name="sort_by">sort by</string>
    <string name="dollar_symbol_f">$%.2f</string>
    <string name="pay_dollar_symbol_f">pay $%.2f</string>
    <string name="s_s">%s %s</string>
    <string name="view_order_detail">view oder details</string>
    <string name="make_sure_to_bring_your_id_proofs_or_details_to_your_payment_used_for_the_order">make sure to bring your id proffs or details to the payement used for the order</string>
    <string name="we_will_send_you_an_email_notification_message_when_its_ready_with_instruction_on_where_to_collect_our_items">We will send you an Email/Notification message when its ready with instruction on where to collect our items.</string>
    <string name="thanks_for_shopping_with_us">Thanks for shopping with us</string>
    <string name="error_no_network">No Internet Connection Found</string>
    <string name="error_bad_request">Bad Request</string>
    <string name="error_internal_error">Internal Error</string>


    <string-array name="shop_and_pickup_delivery_options">
        <item>Curbside Pickup</item>
        <item>Home Delivery</item>
        <item>Pickup at Customer Counter</item>
        <item>In Store</item>
    </string-array>
</resources>