<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgClose"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_margin="@dimen/_12sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_8sdp"
                    android:tint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtThanks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/thanks_for_shopping_with_us"
                    android:textColor="@color/black_212121"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgClose" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtOrderReadyForPickUpAtTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Your order will be ready for pickup at 4:45 PM."
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtThanks" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtSendNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/we_will_send_you_an_email_notification_message_when_its_ready_with_instruction_on_where_to_collect_our_items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtOrderReadyForPickUpAtTime" />

                <View
                    android:id="@+id/viewSendNotificationLine"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/bg_dotted_line_my_orders_1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSendNotification" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtMakeSureIdProof"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/make_sure_to_bring_your_id_proofs_or_details_to_your_payment_used_for_the_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSendNotificationLine" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtCheckEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="For all your order details check out the confirmation mail we sent to admin@gobaskt.com"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMakeSureIdProof" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnViewOrderDetail"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/view_order_detail"
                    android:textAllCaps="false"
                    android:textColor="@color/yellow_ff9b00"
                    android:textSize="@dimen/_9ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCheckEmail" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</layout>